samples/_failures_safe/1761213887_174a56_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_78a938ef.c: In function ‘main’:
./samples/SAFE/__tmp_78a938ef.c:134:40: error: expected ‘)’ at end of input
  134 |         transpose_matrix(&mat1, &result
      |                         ~              ^
      |                                        )
./samples/SAFE/__tmp_78a938ef.c:134:9: error: expected declaration or statement at end of input
  134 |         transpose_matrix(&mat1, &result
      |         ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_78a938ef.c:134:9: error: expected declaration or statement at end of input
